<resources>
    <string name="app_name">PlayRoll</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Password">Contraseña</string>
    <string name="Register">Registrar</string>
    <string name="SignIn">Iniciar sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="SignOut">Cerrar sesion</string>
    <string name="SignIn_google">Iniciar sesion con google</string>
    <string name="prefs_file">es.ukanda.playroll.PREFERENCE_FILE_KEY</string>
    <string name="crate_party">Crear partida</string>
    <string name="join_party">Unirse a una partida</string>
    <string name="add_character">Crear personaje</string>
    <string name="Nombre">nombre</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Crear">Crear</string>
    <string name="añadir_personaje">Añadir personaje</string>
    <string name="local">local</string>
    <string name="online">online</string>
    <string name="nombre_partida">Nombre partida</string>
    <string name="creador">creador</string>
    <string name="Partida">Partida</string>
    <string name="descripcion">Descripcion</string>
    <string name="compartir_local">compartir local</string>
    <string name="compartir_online">compartir online</string>
    <string name="editar">Editar</string>
    <string name="title_activity_load">LoadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="buscar_partida">Buscar partida</string>
    <string name="list_characters">Lista de personajes</string>
    <string name="party_list">Lista de partidas</string>
    <string name="action_about">Acerca de</string>
    <string name="action_help">ayuda</string>
    <string name="siguiente">Siguiente</string>
    <string name="experiencia">Experiencia</string>
    <string name="salvacion">Salvacion</string>
    <string name="skills">Habilidades</string>
    <string name="acountInfo">Cuenta</string>
    <string name="password">password</string>
    <string name="personajes_propios">Permitir unicamente personajes propios</string>
    <string name="ingrese_alias">Ingresa un alias</string>
    <string name="character_name">Nombre de personaje</string>
    <string name="level">Nivel</string>
    <string name="race">Raza</string>
    <string name="clas">Clase</string>
    <string name="add_characters">Añade los personajes</string>
    <string name="start_game">Comenzar partida</string>
    <string name="player_name">Nombre Jugador</string>
    <string name="developing">En desarrollo</string>
    <string name="developing_text_alert">Este apartado aun esta en desarrollo. Pronto estará disponible :D.</string>
    <string name="accept">Aceptar</string>
    <string name="you_need_to_login">Necesitas iniciar sesion</string>
    <string name="closed_session">Sesion cerrada</string>
    <string name="user_successfully_registered">Usuario registrado correctamente</string>
    <string name="failed_to_register">Error al registrar</string>
    <string name="are_you_sure_you_want_to_start_the_game">¿Estas seguro de que quieres comenzar la partida?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="error_party_not_found">Error partida no encontrada</string>
    <string name="error">Error</string>
    <string name="waiting_for_user_requests">Esperando peticiones de los usuarios</string>
    <string name="decline">Rechazar</string>
    <string name="user_want_to_join">El usuario %s quiere unirse a la partida</string>
    <string name="union_request">Petición de unión</string>
    <string name="uploaded_data">Datos cargados</string>
    <string name="error_loading_data">Error al cargar los datos</string>
    <string name="players">Jugadores</string>
    <string name="inventory">Inventario</string>
    <string name="combat">Combate</string>
    <string name="this_feature_is_under_development">Esta funcion esta en desarrolo</string>
    <string name="undetermined">No determinado</string>
    <string name="photo_processed">Foto procesada</string>
    <string name="warning">Advertencia</string>
    <string name="camera_warning">Esta opcion funciona, pero aun esta en desarrollo. Puede que no funcione correctamente. Para mejorar la lectura de datos intente centrar la ficha de personaje en la parte superior de la pantalla.</string>
    <string name="permissions_granted">Permisos concedidos</string>
    <string name="permissions_denied">Se denegaron los permisos necesarios, algunas funciones no estaran disponibles</string>
    <string name="the_level_must_be_between_1_and_20">El nivel debe estar entre 1 y 20</string>
    <string name="fill_in_all_the_fields">Rellena todos los campos</string>
    <string name="the_force_must_be_between_1_and_20">La fuerza debe estar entre 1 y 20</string>
    <string name="dexterity_must_be_between_1_and_20">La destreza debe estar entre 1 y 20</string>
    <string name="constitucion_must_be_between_1_and_20">La constitucion debe estar entre 1 y 20</string>
    <string name="intelligence_must_be_between_1_and_20">La inteligencia debe estar entre 1 y 20</string>
    <string name="wisdom_must_be_between_1_and_20">La sabiduria debe estar entre 1 y 20</string>
    <string name="charisma_must_be_between_1_and_20">El carisma debe estar entre 1 y 20</string>
    <string name="error_validating_data">Error al validar datos</string>
    <string name="warning_camera_correct_info">Puede que la informacion detectada no sea correcta, por favor revisela</string>
    <string name="character">Personaje</string>
    <string name="character_created">Personaje creado</string>
    <string name="error_creating_character">Error al crear el personaje</string>
    <string name="party_created">Partida creada</string>
    <string name="looking_for_games">Buscando partidas</string>
    <string name="error_when_searching_for_games">Error al buscar partidas</string>
    <string name="error_processing_message">Error al procesar el mensaje</string>
    <string name="make_connection">Entablar conexion</string>
    <string name="cancel">Cancelar</string>
    <string name="select_a_character">Selecciona un personaje</string>
    <string name="enter_a_nickname">Introduce un alias</string>
    <string name="connection_refused">Conexion rechazada</string>
    <string name="connection_loss">Conexion perdida</string>
    <string name="waiting_for_the_game_to_start">Esperando a que comience la partida</string>
    <string name="the_game_has_started">La partida ha comenzado</string>
    <string name="select_only_one_character">Selecciona solo un personaje</string>
    <string name="login">Login</string>
    <string name="session_started_successfully">Sesion iniciada con exito</string>
    <string name="failed_to_login">Error al iniciar sesión</string>
    <string name="roll_dice">Lanza el dado</string>
    <string name="press_roll">Pulsa el dado para lanzar</string>
    <string name="select_lenguage">Selecciona un idioma</string>
    <string name="player_list">Lista de jugadores</string>
    <string name="stop_sharing">Dejar de compartir</string>
    <string name="are_you_sure_you_want_to_stop_sharing">Estas seguro que quieres dejar de compartir la partida?</string>
    <string name="exit_party">Salir de la partida</string>
    <string name="close_party">Cerrar partida</string>
    <string name="start_combat">Empezar combate</string>
    <string name="salvation_roll">Tirada de salvacion</string>
    <string name="master_options">Opciones de master</string>
    <string name="sesion_closed">Sesion cerrada</string>
    <string name="sign_out">Cerrar sesion</string>
    <string name="sign_out_confirmation">Estas seguro de que quieres cerrar la sesion actual?</string>
    <string name="loading">Cargando...</string>
    <string name="do_you_need_sing_in">Necesitas iniciar sesion</string>
    <string name="no_parties">No hay partidas</string>
    <string name="result">Resultado</string>
    <string name="ask_roll_dice">Pedir tirada de dados</string>
    <string name="size_of_dice">Numero de caras</string>
    <string name="confirm_exit_party">Estas seguro de que quieres abandonar la partida?</string>
    <string name="the_game_has_end">La partida ha finalizado</string>
    <string name="party_ended">Partida finalizada</string>
    <string name="ask_master_roll_dice">Pedir tirada</string>
    <string name="denied">Peticion denegada</string>
    <string name="ask_for_roll_dice">pide lanzar un dado de</string>
    <string name="want_roll_dice">quiere lanzar los dados</string>
    <string name="party_loaded">Partida cargada</string>
    <string name="clean_database">Vaciar base de datos</string>
    <string name="clean_db">Vaciar base de datos</string>
    <string name="clean_db_message">Estas seguro de que quieres eliminar todos los datos de la base de datos? Toda tu informacion se eliminara!!!</string>
    <string name="database_cleaned">Base de datos limpiada correctamente</string>
    <string name="help_text_1">Un juego de rol (también conocido como juego de rol o RPG) es un tipo de juego en el que los participantes asumen roles ficticios y crean narrativas cooperativas. Para obtener más información sobre los juegos de rol, puedes visitar:</string>
    <string name="help_text_2">Para obtener más información sobre el uso de esta aplicación, consulta el manual de uso:</string>
    <string name="about_text_1">Esta aplicación es el proyecto TFC de Manuel Amorós para el ciclo de desarrollo de aplicaciones multiplataforma. Esta aplicación funciona como un administrador de partidas de juegos de rol.</string>
    <string name="about_text_2">Esta aplicación tiene como objetivo principal apoyar la partida que se esté jugando, brindando un lugar desde el cual tanto jugadores como Master puedan manejar de forma más sencilla los datos de la partida. Busca facilitar la gestión de aspectos como las fichas de personaje, la información del mundo imaginario, los combates y las acciones de los jugadores. Su propósito es mejorar la experiencia de juego, permitiendo a los jugadores enfocarse en la diversión y la narrativa de la aventura.</string>
</resources>