<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_characterList"
            android:title="@string/list_characters" />
        <item
            android:id="@+id/nav_partyList"
            android:title="@string/party_list" />

        <!--TODO hacer que esto sea uno y se vaya alternando-->
        <item
            android:id="@+id/miSignOut"
            android:title="@string/SignOut" />
        <item
            android:id="@+id/miSignIn"
            android:title="@string/SignIn" />
    </group>
</menu>